<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutConst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv1_1"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/color_res1_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_1" />

        <View
            android:id="@+id/color_res1_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_1" />

        <TextView
            android:id="@+id/textView1_2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="serif"
            android:text="@string/tv1_2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_res1_2" />


        <TextView
            android:id="@+id/textView2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv2_1"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_2" />

        <View
            android:id="@+id/color_res2_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_1" />

        <View
            android:id="@+id/color_res2_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@+id/color_res2_3"
            app:layout_constraintStart_toEndOf="@+id/color_res2_1"
            app:layout_constraintTop_toBottomOf="@+id/textView2_1" />

        <View
            android:id="@+id/color_res2_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_1" />

        <TextView
            android:id="@+id/textView2_2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="serif"
            android:text="@string/tv2_2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_res2_2" />


        <TextView
            android:id="@+id/textView3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv3_1"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_2" />

        <View
            android:id="@+id/color_res3_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3_1" />

        <View
            android:id="@+id/color_res3_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@+id/color_res3_3"
            app:layout_constraintStart_toEndOf="@+id/color_res3_1"
            app:layout_constraintTop_toBottomOf="@+id/textView3_1" />

        <View
            android:id="@+id/color_res3_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3_1" />

        <TextView
            android:id="@+id/textView3_2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="serif"
            android:text="@string/tv3_2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_res3_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>