<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/color1">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/textViewSex1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_show" />
            <TextView
                android:id="@+id/textViewInListSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:id="@+id/textViewHeight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heigh" />
            <TextView
                android:id="@+id/textViewInListHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/TextView04"
                android:text="" />

            <TextView
                android:id="@+id/TextView05"
                android:text="" />

            <ImageView
                android:id="@+id/imageViewShirt"
                android:layout_width="40dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/shirt" />

            <ImageView
                android:id="@+id/imageViewJeans"
                android:layout_width="48dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/jeans" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewRu"
                android:layout_width="40dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_ru" />

            <TextView
                android:id="@+id/textViewRu"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:text="@string/ru" />


            <TextView
                android:id="@+id/textViewInListRuResShirt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/textViewInListRuResJeans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/imageViewInt"
                android:layout_width="40dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_int" />

            <TextView
                android:id="@+id/textViewInt"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:text="@string/int1" />

            <TextView
                android:id="@+id/textViewInListIntResShirt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/textViewInListIntResJeans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/imageViewEu"
                android:layout_width="40dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_eu" />

            <TextView
                android:id="@+id/textViewEu"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:text="@string/eu" />

            <TextView
                android:id="@+id/textViewInListEuResShirt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/textViewInListEuResJeans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/imageViewUs"
                android:layout_width="40dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_us" />

            <TextView
                android:id="@+id/textViewUs"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:text="@string/us" />

            <TextView
                android:id="@+id/textViewInListUsResShirt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/textViewInListUsResJeans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>